// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BallTriangle /> component inherits props 1`] = `
<svg
  class="icon-loading test"
  data-testid="icon"
  height="2em"
  viewBox="0 0 57 57"
  width="auto"
>
  <g
    fill="none"
    fill-rule="evenodd"
    stroke-width="2"
    transform="translate(1 1)"
  >
    <circle
      cx="5"
      cy="50"
      fill="#000"
      fill-opacity=".5"
      r="5"
      stroke="#fff"
      stroke-opacity=".5"
    >
      <animate
        attributeName="cy"
        begin="0s"
        calcMode="linear"
        dur="2.2s"
        repeatCount="indefinite"
        values="50;5;50;50"
      />
      <animate
        attributeName="cx"
        begin="0s"
        calcMode="linear"
        dur="2.2s"
        repeatCount="indefinite"
        values="5;27;49;5"
      />
    </circle>
    <circle
      cx="27"
      cy="5"
      fill="#000"
      fill-opacity=".5"
      r="5"
      stroke="#fff"
      stroke-opacity=".5"
    >
      <animate
        attributeName="cy"
        begin="0s"
        calcMode="linear"
        dur="2.2s"
        from="5"
        repeatCount="indefinite"
        to="5"
        values="5;50;50;5"
      />
      <animate
        attributeName="cx"
        begin="0s"
        calcMode="linear"
        dur="2.2s"
        from="27"
        repeatCount="indefinite"
        to="27"
        values="27;49;5;27"
      />
    </circle>
    <circle
      cx="49"
      cy="50"
      fill="#000"
      fill-opacity=".5"
      r="5"
      stroke="#fff"
      stroke-opacity=".5"
    >
      <animate
        attributeName="cy"
        begin="0s"
        calcMode="linear"
        dur="2.2s"
        repeatCount="indefinite"
        values="50;50;5;50"
      />
      <animate
        attributeName="cx"
        begin="0s"
        calcMode="linear"
        dur="2.2s"
        from="49"
        repeatCount="indefinite"
        to="49"
        values="49;5;27;49"
      />
    </circle>
  </g>
</svg>
`;

exports[`<BallTriangle /> component renders and matches snapshot 1`] = `
<svg
  class="icon-loading"
  data-testid="icon"
  height="57"
  viewBox="0 0 57 57"
  width="57"
>
  <g
    fill="none"
    fill-rule="evenodd"
    stroke-width="2"
    transform="translate(1 1)"
  >
    <circle
      cx="5"
      cy="50"
      r="5"
      stroke="#fff"
    >
      <animate
        attributeName="cy"
        begin="0s"
        calcMode="linear"
        dur="2.2s"
        repeatCount="indefinite"
        values="50;5;50;50"
      />
      <animate
        attributeName="cx"
        begin="0s"
        calcMode="linear"
        dur="2.2s"
        repeatCount="indefinite"
        values="5;27;49;5"
      />
    </circle>
    <circle
      cx="27"
      cy="5"
      r="5"
      stroke="#fff"
    >
      <animate
        attributeName="cy"
        begin="0s"
        calcMode="linear"
        dur="2.2s"
        from="5"
        repeatCount="indefinite"
        to="5"
        values="5;50;50;5"
      />
      <animate
        attributeName="cx"
        begin="0s"
        calcMode="linear"
        dur="2.2s"
        from="27"
        repeatCount="indefinite"
        to="27"
        values="27;49;5;27"
      />
    </circle>
    <circle
      cx="49"
      cy="50"
      r="5"
      stroke="#fff"
    >
      <animate
        attributeName="cy"
        begin="0s"
        calcMode="linear"
        dur="2.2s"
        repeatCount="indefinite"
        values="50;50;5;50"
      />
      <animate
        attributeName="cx"
        begin="0s"
        calcMode="linear"
        dur="2.2s"
        from="49"
        repeatCount="indefinite"
        to="49"
        values="49;5;27;49"
      />
    </circle>
  </g>
</svg>
`;
